# sauron_research

./: .gitignore  README.md  data  full_run.sh  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: api-reference.md  code-standards.md  codebase-summary.md  configuration-parameters.md  project-overview-pdr.md  project-roadmap.md  reid-configuration-parameters.md  sauron-integration-guide.md  system-architecture.md
scripts/: benchmark-reid-pipeline-performance.py  benchmark_latency.py  demo_video_reid_inference.py  run_evaluation.py  test_all.sh  validate-reid-pipeline-accuracy.py  visualize_tracks.py
src/: __init__.py
src/embeddings/: __init__.py  extractor.py
src/hat_reid/: __init__.py  lda.py  queues.py
src/reid_research/: __init__.py  config.py  detector.py  faiss-gallery-index-wrapper.py  fastreid_extractor.py  feature_extractor.py  gallery-knn-cache-for-selective-reranking.py  gallery.py  jointbdoe_detector.py  matching.py  pipeline.py  utils.py
src/reid_research/detectors/: __init__.py
src/reid_research/extractors/: __init__.py  torchreid-feature-extractor.py
src/reid_research/models/: __init__.py  osnet.py
src/reid_research/visualization/: __init__.py  colors.py  extended_frame_renderer.py  (+4 more)
src/tracker/: __init__.py  hat_tracker.py
tests/: __init__.py  conftest.py  test_config_loader.py  test_extractor.py  test_feature_extractor.py  test_gallery_matching.py  test_lda.py  test_matching_module.py  test_queues.py  test_rank_voting.py  test_tracker.py  test_utils.py  test_video_pipeline.py  test_visualization_integration.py
(+10 files in other folders)
